--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -322,7 +322,8 @@
       "proposal_sent": "your solution has been submitted ",
       "activate": "Confirm your email address in one click ",
       "link": "to ensure the authenticity of your account. Click on the activation link that you received at : {{mail}}",
-      "question": "Do you have a question? Please contact us at : "
+      "question": "Do you have a question? Please contact us at : ",
+      "consultation_access": "Access to the consultation"
     },
     "form": {
       "bait": "We should ",
