feat(global): add ukraine to countries

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1292,7 +1292,7 @@
     "SI": "Slowenien",
     "SK": "Slowakei",
     "US": "USA",
-    "UK": "Ukrainische"
+    "UA": "Ukrainische"
   },
   "languages": {
     "fr": "Français",
