--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1301,7 +1301,7 @@
     "SI": "Slovénie",
     "SK": "Slovaquie",
     "US": "USA",
-    "UK": "Ukraine"
+    "UA": "Ukraine"
   },
   "languages": {
     "fr": "Français",
