--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -1250,7 +1250,7 @@
     "SI": "Slowenien",
     "SK": "Slowakei",
     "US": "USA",
-    "UK": "Ukrainische"
+    "UA": "Ukrainische"
   },
   "languages": {
     "fr": "Français",
