--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1273,7 +1273,8 @@
     "SI": "Slovenia",
     "SK": "Slovakia",
     "US": "USA",
-    "UK": "Ukraine"
+    "UA": "Ukraine"
+
   },
   "languages": {
     "fr": "Français",
