feat(global): add ukraine to countries

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1291,7 +1291,8 @@
     "SE": "Schweden",
     "SI": "Slowenien",
     "SK": "Slowakei",
-    "US": "USA"
+    "US": "USA",
+    "UK": "Ukrainische"
   },
   "languages": {
     "fr": "Français",
