--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -1249,7 +1249,8 @@
     "SE": "Schweden",
     "SI": "Slowenien",
     "SK": "Slowakei",
-    "US": "USA"
+    "US": "USA",
+    "UK": "Ukrainische"
   },
   "languages": {
     "fr": "Français",
