--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -1230,7 +1230,8 @@
     "SE": "Sweden",
     "SI": "Slovenia",
     "SK": "Slovakia",
-    "US": "USA"
+    "US": "USA",
+    "UK": "Ukraine"
   },
   "languages": {
     "fr": "Français",
