--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -1258,7 +1258,8 @@
     "SE": "Suède",
     "SI": "Slovénie",
     "SK": "Slovaquie",
-    "US": "USA"
+    "US": "USA",
+    "UK": "Ukraine"
   },
   "languages": {
     "fr": "Français",
