feat(front): 3077 logic and style for original version switch proposal

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -317,6 +317,8 @@
     "next": "Následující návrh",
     "validate": "Potvrdit",
     "content": "Obsah návrhu: ",
+    "original": "Zobrazit v originále",
+    "translation": "Viz překlad",
     "number": "Karta číslo {{current}} z {{total}}",
     "posted_label": "Zveřejněno v ",
     "author": {
