--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -317,6 +317,8 @@
     "next": "Наступна пропозиція",
     "validate": "Підтвердити",
     "content": "Зміст пропозиції: ",
+    "original": "Переглянути оригінал",
+    "translation": "Дивіться переклад",
     "number": "Картка номер {{current}} з {{total}}",
     "posted_label": "Опубліковано в ",
     "author": {
