--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -284,6 +284,8 @@
       "title": "Solution status:"
     },
     "content": "Solution content",
+    "original": "View original",
+    "translation": "View translation",
     "validate": "Validate"
   },
   "intro_card": {
