feat(global): update ukrainian translation on legal page

--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1185,9 +1185,9 @@
     "paragraph": "Ідея, пропозиція, помилка? Ви можете зв’язатися з нами, надіславши електронного листа на нашу адресу:"
   },
   "legal": {
-    "title": "Юридична інформація",
-    "make_infos": "Видавець сайту: MAKE.ORG, акціонерне товариство спрощеного типу з капіталом {{make_capital}}, що розташоване за адресою {{make_address}}, зареєстроване в RCS PARIS за номером {{make_rcs}} (надалі «MAKE.ORG»).",
-    "mail": "Адреса ел. пошти: ",
+    "title": "ЮРИДИЧНА ІНФОРМАЦІЯ",
+    "make_infos": "Видавець сайту: MAKE.ORG, акціонерне товариство спрощеного типу з капіталом 1 056 017,00 євро, що розташоване за адресою 13-15 Rue de la Bûcherie 75005 Paris, зареєстроване в Реєстрі торгівлі та компаній Парижа за номером 820 016 095 (надалі «MAKE.ORG»).",
+    "mail": "Адреса ел. пошти: ",
     "make_phone": "Номер телефону: ",
     "make_phone_number": "{{make_phone_number}}",
     "director": "Директор публікації: ",
