feat(global): update ukrainian translation on cookies page

--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1199,25 +1199,25 @@
     "cnil_number": "{{cnil_number}}"
   },
   "cookies_management": {
-    "title": "Управління файлами cookie",
-    "dated": "- на {{date}} -",
-    "button": "Підтвердити мій вибір",
+    "title": "УПРАВЛІННЯ ФАЙЛАМИ COOKIE",
+    "dated": "- станом на {{date}} -",
+    "button": "ПІДТВЕРДИТИ МІЙ ВИБІР",
     "intro": {
-      "title": "Що таке файли cookie?",
-      "first_paragraph": "Файл cookie — це невеликий комп’ютерний файл, який може зберігатися і зчитуватися під час відвідування користувачем вебсайту або мобільного застосунку, незалежно від типу використовуваного пристрою (комп’ютера, смартфона тощо).",
+      "title": "ЩО ТАКЕ ФАЙЛИ COOKIE?",
+      "first_paragraph": "Файл cookie — це невеликий комп’ютерний файл, який може зберігатися  та зчитуватися під час відвідування користувачем вебсайту або мобільного застосунку, незалежно від типу використовуваного пристрою (комп’ютера, смартфона тощо).",
       "second_paragraph": "Деякі файли cookie необхідні для належного функціонування сайтів або додатків, інші сприяють оптимізації роботи сайту або поліпшенню досвіду інтернет-користувачів."
     },
     "use": {
-      "title": "Як ми використовуємо файли cookie?",
-      "first_paragraph": "Коли ви відвідуєте наш сайт, на вашому пристрої розміщуються файли cookie, щоб покращити ваш користувацький досвід, підвищити продуктивність сайту й оптимізувати наші публічні консультації з громадянами.",
+      "title": "ЯК МИ ВИКОРИСТОВУЄМО ФАЙЛИ COOKIE?",
+      "first_paragraph": "Коли ви відвідуєте наш сайт, на вашому пристрої розміщуються файли cookie, щоб покращити ваш користувацький досвід, підвищити продуктивність сайту й оптимізувати наші публічні консультації громадян.",
       "second_paragraph": "Інформація, що міститься у файлах cookie, не призначена для ідентифікації вас особисто й ніколи не використовується для будь-яких інших цілей, окрім зазначених нижче."
     },
     "partners": {
-      "title": "Хто наші партнери?",
+      "title": "ХТО НАШІ ПАРТНЕРИ?",
       "intro": "Окрім файлів cookie, створених і керованих платформою Make, на нашому сайті також розміщуються файли cookie наступними партнерами:"
     },
     "details": {
-      "title": "Які файли cookie ми використовуємо?",
+      "title": "ЯКІ ФАЙЛИ COOKIE МИ ВИКОРИСТОВУЄМО?",
       "intro": "На нашому сайті розміщуються наступні файли cookie:",
       "mandatory": "Досі активно",
       "duration": "Тривалість: {{duration}}",
@@ -1227,37 +1227,37 @@
       "year_plural": "{{count}} років",
       "technicals": {
         "name": "Технічні файли cookie:",
-        "description": "Ці файли cookie необхідні для роботи сайту й не можуть бути вимкнені. Ви можете налаштувати свій браузер на блокування або інформування про існування цих файлів cookie, але це може вплинути на деякі розділи нашого сайту. Ці файли cookie не призначені для вашої особистої ідентифікації.",
+        "description": "ці файли cookie необхідні для роботи сайту й не можуть бути вимкнені. Ви можете налаштувати свій браузер на блокування або інформування про існування цих файлів cookie, але це може вплинути на деякі розділи нашого сайту. Ці файли cookie не призначені для вашої особистої ідентифікації. Завжди активними є:",
         "secure": "make-secure: після входу в систему на Make.org цей файл cookie гарантує, що з’єднання буде підтримуватися під час перегляду вами сервісу.",
         "secure-expiration": "make-secure-expiration: цей файл cookie використовується для виявлення вашої неактивності в сервісі й завершення сеансу.",
         "demographics": "make-demographics: цей файл cookie дозволяє нам дізнатися, чи запитувалася у вас демографічна інформація (віковий діапазон, регіон, стать тощо) на цьому пристрої раніше, щоб ми не запитували її знову під час наступного відвідування."
       },
       "preferences": {
         "name": "Уподобання:",
-        "description": "ці файли cookie використовуються для запам’ятовування ваших уподобань на нашому сайті й, таким чином, покращують ваш досвід навігації. Ви можете налаштувати свій браузер на блокування або інформування про існування цих файлів cookie, але це може вплинути на деякі розділи нашого сайту. Ці файли cookie не призначені для вашої особистої ідентифікації.",
+        "description": "ці файли cookie використовуються для запам’ятовування ваших уподобань на нашому сайті, покращуючи в такий спосіб ваш досвід навігації. Ви можете налаштувати свій браузер на блокування або інформування про існування цих файлів cookie, але це може вплинути на деякі розділи нашого сайту. Ці файли cookie не призначені для вашої особистої ідентифікації. Завжди активними є: ",
         "google-connect": "Google connect: ці файли cookie дозволяють вам зареєструватися та виконати вхід до вашого особистого кабінету.",
         "facebook-connect": "Facebook connect: ці файли cookie дозволяють вам зареєструватися та виконати вхід до вашого особистого кабінету.",
         "session-id": "make-session-id: цей файл cookie використовується для групування всіх дій, які ви виконуєте на сайті під час сеансу.",
-        "session-id-expiration": "make-session-id-expiration: цей файл cookie використовується для відображення повідомлення про те, що термін дії вашого сеансу закінчився (через 20 хвилин) і тому він буде перезавантажений.",
+        "session-id-expiration": "make-session-id-expiration : цей файл cookie використовується для відображення повідомлення про те, що термін дії вашого сеансу закінчився (через 20 хвилин) і тому він буде перезавантажений.",
         "user-id": "make-user-id: цей файл cookie ідентифікує вас після входу до особистого кабінету на Make.org. Після повторного підключення цей файл попередньо заповнить ваше ім’я користувача.",
         "cookie-preferences": "make-cookie-preferences: цей файл cookie запам’ятовує ваші вподобання щодо використання файлів cookie на нашому сервісі."
       },
       "statistics": {
-        "name": "Файли статистики:",
+        "name": "Статистичні  файли:",
         "description": "ці файли cookie використовуються для аналізу відвідувань нашого сайту й поліпшення його роботи. Уся інформація, зібрана цими файлами cookie, має зведений вигляд і тому є анонімною. Якщо ви не приймаєте ці файли cookie, ми не знатимемо про ваше відвідування.",
-        "visitor-id": "make-visitor-id: цей файл cookie використовується для відстеження відвідувань нашого сервісу для анонімного узагальненого вимірювання трафіку. Події навігації надсилаються до інструменту аналізу MixPanel.",
+        "visitor-id": "make-visitor-id: цей файл cookie використовується для ідентифікації унікального відвідувача.",
         "visitor-created-at": "make-visitor-created-at: цей файл cookie використовується для отримання дати першого відвідування платформи.",
         "facebook-tracking": "Файл cookie для відстеження Facebook: цей файл cookie використовується для збору статистики про кількість відвідувачів нашого сайту задля поліпшення роботи нашого сайту й аналізу відвідуваності.",
-        "hotjar": "@@cookies_management.details.statistics.hotjar|fr:Hotjar : Il s’agit d’un outil permettant de réaliser de l’analyse comportementale de l'utilisation du site Web. Pour en savoir plus : "
+        "hotjar": "cookies Hotjar:  інструмент для поведінкового аналізу використання вебсайтів. Більш детальна інформація: https://www.hotjar.com/legal/policies/privacy/"
       },
       "social": {
         "name": "Файли соціальних мереж:",
-        "description": "ці файли cookie, що активуються третіми особами, дозволяють вам поширювати вміст нашого сайту в соціальних мережах і таким чином допомагають нам оптимізувати наш вплив. Якщо ви не даєте згоду на розміщення цих файлів cookie, ви не зможете скористатися цими інструментами для поширення.",
+        "description": "файли cookie, що активуються третіми особами, дозволяють вам поширювати вміст нашого сайту в соціальних мережах і таким чином допомагають нам оптимізувати наш вплив. Якщо ви не даєте згоду на розміщення цих файлів cookie, ви не зможете скористатися цими інструментами для поширення.",
         "facebook_tracking": "Pixel Facebook: ці файли cookie використовуються для оптимізації ефективності кампаній із просування публічних консультацій у Facebook для підвищення участі громадян.",
-        "twitter_tracking": "Pixel Twitter: ці файли cookie використовуються для оптимізації ефективності кампаній із просування публічних консультацій у Twitter для підвищення участі громадян.",
-        "facebook_sharing": "Поширення у Facebook: цей файл cookie дозволяє користувачеві ділитися контентом на Facebook і покращує зручність використання.",
-        "twitter_sharing": "Поширення у Twitter: цей файл cookie дозволяє користувачеві ділитися контентом на Twitter і покращує зручність використання.",
-        "linkedin_sharing": "Поширення в LinkedIn: цей файл cookie дозволяє користувачеві ділитися контентом на LinkedIn і покращує зручність використання."
+        "twitter_tracking": "Pixel Twitter: ці файли cookie використовуються для оптимізації ефективності кампаній із просування публічних консультацій у Twitter задля підвищення участі громадян.",
+        "facebook_sharing": "Поширення у Facebook: цей файл cookie дозволяє користувачеві ділитися вмістом на Facebook і покращує зручність використання.",
+        "twitter_sharing": "Поширення у Twitter: цей файл cookie дозволяє користувачеві ділитися вмістом на Twitter і покращує зручність використання.",
+        "linkedin_sharing": "Поширення в LinkedIn: цей файл cookie дозволяє користувачеві ділитися вмістом на LinkedIn і покращує зручність використання."
       }
     }
   },
