--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1274,7 +1274,8 @@
     "fr": "Français",
     "en": "English",
     "de": "Deutsch",
-    "uk": "Українська"
+    "uk": "Українська",
+    "cs": "Česky"
   },
   "sequence_zone": {
     "popular_title": "Popular solutions",
