--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1326,7 +1326,8 @@
     "fr": "Français",
     "en": "English",
     "de": "Deutsch",
-    "uk": "Українська"
+    "uk": "Українська",
+    "cs": "Česky"
   },
   "language_switch": {
     "country_title": "Ваша країна",
