--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1302,7 +1302,8 @@
     "fr": "Français",
     "en": "English",
     "de": "Deutsch",
-    "uk": "Українська"
+    "uk": "Українська",
+    "cs": "Česky"
   },
   "language_switch": {
     "country_title": "Votre pays",
