--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -1131,6 +1131,7 @@
     "make_phone": "Telefonnummer: ",
     "make_phone_number": "{{make_phone_number}}",
     "director": "Verantwortlich für den Inhalt: ",
+    "name": "Axel Dauchez",
     "host": "Seitenbetreiber: ",
     "host_address": "{{make_host_address}}, Frankreich",
     "host_phone": "Telefonnummer: ",
