--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -1052,6 +1052,7 @@
     "make_phone": "Phone number: ",
     "make_phone_number": "{{make_phone_number}}",
     "director": "Head of publishing: ",
+    "name": "Axel Dauchez",
     "host": "Webite host: ",
     "host_address": "{{make_host_address}} FRANCE",
     "host_phone": "Phone number: ",
