--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -1140,6 +1140,7 @@
     "make_phone": "Numéro de téléphone : ",
     "make_phone_number": "{{make_phone_number}}",
     "director": "Directeur de Publication : ",
+    "name": "Axel Dauchez",
     "host": "Hébergeur du site : ",
     "host_address": "{{make_host_address}} FRANCE",
     "host_phone": "Numéro de téléphone : ",
